--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             display: flex;
         }
         .key-board-wrapper{
-            padding-top: 100px;
-            display: flex;
-            justify-content: center;
+            width: 100%;
+            padding-top: 80px;
         }
         .key-board{
+            width: 100%;
             display: flex;
             justify-content: center;
         }
         .key{
-            width: 100px;
+            width: 25%;
             height: 100px;
             background-color: gray;
             border: 3px solid black;
@@ -55,12 +55,8 @@
             justify-content: center;
             cursor: pointer;
         }
-        .longkey{
-            width: 300px;
-            height: 50px;
-            background-color: gray;
-            border: 3px solid black;
-            cursor: pointer;
+        .box{
+            width: 25%;
         }
     </style>
 </head>
@@ -77,20 +73,17 @@
             </div>
         </div>
         <div class="key-board-wrapper">
-            <div>
-                <div class="key-board">
-                    <div class="box"></div>
-                    <div class="box key" id="up" onclick="moveBlock('ArrowUp')">위</div>
-                    <div class="box"></div>
-                </div>
-                <div class="key-board">
-                    <div class="box key" id="left" onclick="moveBlock(-1)">왼쪽</div>
-                    <div class="box key" id="down" onclick="moveBlock(0)">아래</div>
-                    <div class="box key" id="right" onclick="moveBlock(1)">오른쪽</div>
-                </div>
+            <div class="key-board">
+                <div class="box"></div>
+                <div class="box key" id="up" onclick="moveBlock('ArrowUp')">위</div>
+                <div class="box"></div>
+                <div class="box"></div>
             </div>
-            <div class="key-board" style="padding-top: 50px;">
-                <div class="longkey" id="space" onclick="moveBlock('space')">스페이스바</div>
+            <div class="key-board">
+                <div class="box key" id="left" onclick="moveBlock(-1)">왼쪽</div>
+                <div class="box key" id="down" onclick="moveBlock(0)">아래</div>
+                <div class="box key" id="right" onclick="moveBlock(1)">오른쪽</div>
+                <div class="key" id="space" onclick="moveBlock('space')">스페이스바</div>
             </div>
         </div>
     </div>
